2006-01-09  Ali Akcaagac / Andre Klapper <a9016009@gmx.de>
	* tools/evolution-addressbook-clean.in: changing old evo1.4 path to
	current path. Fixes bug 307513.
	Committing on behalf of Ali Akcaagac.

2006-01-04  Shi Pu  <shi.pu@sun.com>

        * gui/component/addressbook-config.c (eabc_details_search): add a not
        NULL-pointer check before using lud->scope.

2005-12-14  Sushma Rai  <rsushma@novell.com>

	* importers/evolution-ldif-importer.c (ldif_import): Proceeding with
	the import activity only if the book is writable.

	* importers/evolution-vcard-importer.c (vcard_import): Similar.
	Fixes #266003

2005-11-11 Evan Yan <evan.yan@sun.com>

	* pinting/e-contact-print.c (e_contact_build_style):
	Add a config argument to get the actual page size and set it to style.
	(e_contact_print_response): modify the call to e_contact_build_style
	accordingly.
	(e_contact_print_preview): modify the call to e_contact_build_style
	accordingly.
	Fixes # 316280

2005-10-03   Devashish Sharma <sdevashish@novell.com>

	* gui/widgets/e-addressbook-view.c (eab_view_print): Get selected
	contacts list and forward it. Earlier list was not being sent so no
	chance of printing the selected contacts.
	(eab_view_print_preview): Same as for print above.

	* printing/e-contact-print.c (e_contact_print_dialog_new): uses_book was
	being set in every case. removed that and set contact list which is now
	being passed to it from eab_view_print.
	(e_contact_print_preview): It was generating preview for the whole
	book in all cases. Now if there is a list of selected contacts it
	generates preview for only those contacts and if the list is NULL (no
	selected contacts), it generates preview for the whole book.
	(e_contact_print_response): Checks the current range selected (All or
	selection) and prints the contacts based on that. If All is selected
	all contacts are printed and if Selection is selected only the selected
	contacts are printed.
